static/css/main.css
h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
}

h1 {
    font-size: 2em;
    margin-bottom: 1em;
}

blockquote {
    background: #f9f9f9;
    border-left: 10px solid #ccc;
    margin: 1.5em 10px;
    padding: 0.5em 10px;
    quotes: "\201C""\201D""\2018""\2019";
}

blockquote:before {
    color: #ccc;
    content: open-quote;
    font-size: 3.5em;
    line-height: 0.1em;
    margin-right: 0.1em;
    vertical-align: -0.4em;
}

blockquote p {
    display: inline;
}

:root {
    --text-color: #282828;
    --bg-color: #f9f9f9;
    --primary-color: #35479A;
    --secondary-color: #35479A;
    --bg-codeblock-color: #272822;
}

body {
    background-color: var(--bg-color);
    color: var(--text-color);
    font-family: "Verdana", sans-serif;
    font-size: 1.3em;
    margin: 0;
    overflow-y:scroll;
    padding: 0;
    position: relative;
}

main {
    margin-bottom: 200px;
    text-align: justify;
    text-justify: inter-word;
}

table {
    margin-left: auto;
    margin-right: auto;
}

[id^=section] {
    list-style: none;
}

/********************/
/****** header ******/
/********************/

header.site-header {
    align-items: center;
    background-color: var(--primary-color);
    color: var(--bg-color);
    display: flex;
    height: 3.4em;
    justify-content: center;
}

header.site-header img {
    height: 1.5em;
    margin-right: 1em;
    position: relative;
}

header.site-header ul {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    list-style: none;
}

header.site-header li {
    padding: 0 15px;
}

.header-home-menu {
    align-items: center;
    display: flex;
    justify-content: space-between;
    position: absolute;
    width: 90%;
}

.header-home-title {
    margin: 0 auto 0;
    z-index: 1;
}

/********************/
/****** content *****/
/********************/

.container {
    margin-left: auto;
    margin-right: auto;
    width: 868px;
}

.content :is(h1, h2, h3, h4, h5, h6) {
    padding-top: 25px;
}

h1.site-title {
    font-size: 1.4em;
    margin: 0;
}

h1.article-title {
    font-size: 3em;
    margin: 0;
}

.article-subtitle {
    color: #575757;
    font-weight: 500;
}

.article-title-box {
    align-items: center;
    background-color: #ededed;
    display: flex;
    flex-direction: column;
    height: 15em;
    justify-content: center;
    margin-bottom: 4em;
    text-align: center;
}

#article-container  {
    align-content: flex-start;
    align-items: baseline;
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    line-height: 22pt;
}

a.code-stub-button {
    background-color: var(--secondary-color);
    border-radius: 6px;
    color: white;
    display: inline-block;
    font-weight: 600;
    line-height: 28px;
    padding: 0.5em 0.8em;
    text-align: center;
    text-decoration: none;
}

.home-title-box {
    background-color: #222;
    color: whitesmoke;
    padding: 2em 0;
    text-align: center;
}

.site-header-title {
    font-size: 5em;
    margin: 0;
}

.site-header-subtitle {
    color: #ccc;
}

.article-list {
    list-style-type: none;
    margin-left: auto;
    margin-right: auto;
    max-width: 690px;
    padding: 0 1em;
}

.article-item {
    background: lightgray;
    display: block;
    margin: 1em 0;
    padding: 1em;
}

.article-item h2 {
    font-size: 1.2em;
    margin: 0;
}

.article-item a {
    color: inherit;
    display: block;
    padding: 0;
    text-decoration: none;
}

img {
    max-width: 100%;
}

#imgzoom {
    background: rgba(0, 0, 0, 0.5);

    display: flex;
    align-items: center;

    position: fixed;
    left: 0;
    top: 0;
    z-index: 99;

    width: 100%;
    height: 100%;

    visibility: hidden;
    opacity: 0;
    transition: opacity ease 0.4s;
}

#imgzoom.show {
    visibility: visible;
    opacity: 1;
}

#imgzoom img {
    width: 90%;
    height: 90%;
    margin: auto;
    object-fit: contain;
}

figure {
    text-align: center;
}

figcaption {
    color: gray;
    font-size: 0.9em;
    margin-top: -15px;
}

.header-home-link {
    align-items: center;
    display: flex;
    text-decoration: none;
}

.header-home-link:visited {
    color: inherit;
}

.header-menu {
    color: #d3d3d3;
    font-size: 1em;
    margin: 0;
}

details {
    background-color: rgba(0, 0, 0, .04);
    border: 1px solid #aaa;
    border-radius: 4px;
    padding: .5em .5em 0;
}

summary {
    font-weight: bold;
    margin: -.5em -.5em 0;
    padding: .5em;
}

details summary { 
    cursor: pointer;
}
  
details summary > * {
    display: inline;
}  

details[open] {
    padding: .5em;
}

details[open] summary {
    border-bottom: 1px solid #aaa;
    margin-bottom: .5em;
}

/********************/
/****** footer ******/
/********************/

.footer {
    bottom: 45%;
    position: sticky;
    width: 100%;
}

.section-button {
    border-radius: 10%;
    background-color: #DDDDDD;

    position: fixed;
    bottom: 40px;

    cursor: pointer;

    width: 56px;
    height: 56px;
}

.section-button.prev-button {
    left: clamp(40px, calc(50% - 500px), 50%);
}

.section-button.next-button {
    right: clamp(40px, calc(50% - 500px), 50%);
}

.section-button svg {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.footer-list {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    position: sticky;
    top: 0;
    z-index: 1;
}

[class^=footer-state] {
    align-items: center;
    background-color: var(--bg-color);
    bottom: 0;
    display: flex;
    flex-direction: row;
    height: 10px;
    width: 100%;
}

/* Colors for the "loading bar" that show the advancement at the top
 * the page */
.started {
    background-color: var(--primary-color);
}

.ended {
    background-color: var(--primary-color);
}




/********************/
/* table of content */
/********************/
.toc {
    border-left: 4px solid var(--primary-color);
    border-radius: 5px;
    list-style: none;
    margin: 20px;
    padding-left: 15px;
    position: sticky;
    top: 50px;
}

.toc-title {
    color: var(--primary-color);
    font-size: 1.4em;
    font-weight: bold;
    margin-top: 5px
}

.toc ul {
    list-style: none;
    margin: 0;
    max-height: 75vh;
    overflow-y: auto;
    padding: 15px;
}

.toc li {
    margin-bottom: 10px;
    margin-left: 0;
}

.toc a:any-link {
    color: var(--text-color);
    font-weight: bold;
    text-decoration: none;
}

.toc a:hover {
    color: grey;
}

.toc ul ul a:any-link {
    font-weight: normal;
    text-decoration: none;
}



/********************/
/**** code block ****/
/********************/

.code {
    background-color: var(--bg-codeblock-color);
    border-radius: 10px;
    display: flex;
    flex-direction: row;
    line-height: normal;
    margin: 10px;
    max-width: 100%;
    min-width: 100px;
    overflow-x: scroll;
    padding: 10px;
    place-content: space-between;
    position: relative;
}

code:not(pre>code) {
    background-color: #CECECE;
    border: 1px solid #BCBEC0;
    border-radius: 5px;
    font: .75em Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
    padding: 1px;
    padding-bottom: .3px;
    white-space: nowrap;
}

.copy-button {
    background-color: var(--secondary-color);
    border-style: none;
    border-radius: 8px;
    color: #FFFFFF;
    cursor: pointer;
    height: 40px;
    line-height: 20px;
    padding: 10px 16px;
    position: sticky;
    right: 10px;
}

pre {
    margin: 0;
    padding-right: 10px;
}

pre code {
    margin: 0;
    padding: 0;
    white-space: pre;
}


.code::-webkit-scrollbar {
    height: 0;
}

/********************/
/**** responsive ****/
/********************/

@media screen and (max-width: 1400px) {
    #article-container {
        display: block;
    }
    .toc {
        margin: 10%;
        position: relative;
    }
}

